--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": {
     "name": "Jalil Markel",
     "email": "greatjalilbooker@gmail.com",
-    "url": "https://jalilmarkel.me"
+    "url": "https://jalilbooker.github.io"
   },
   "scripts": {
     "dev": "next dev",
