--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 MONGODB_URI = <MONGODB_URI> ( put a mongodb url here)
-BASE_URL = https://jalilbooker.github.io   (this is my api URL, change it to http://localhost:3000, in case you tend to use your database)
+BASE_URL = https://jalilbooker.github.io   (this is my api URL, change it to http://jalilbooker.github.io, in case you tend to use your database)
 ENV = <production || development> (environment)
