--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "deploy-gh": "gh-pages -b gh-pages -d out",
+    "deploy": "next build & next export & gh-pages -b gh-pages -d out",
     "export": "next export",
     "lint": "eslint --fix .",
     "format": "prettier --write ./**/*.{js,jsx,ts,tsx,css,md,json} --config ./.prettierrc --ignore-path .gitignore",
